@@ -1103,6 +1103,8 @@ public:
                 dst2->SetHasGreenLight(src2->HasGreenLight());
                 dst2->SetBlockBrakeClosed(src2->BlockBrakeClosed());
                 dst2->SetIsIndestructible(src2->IsIndestructible());
+                dst2->SetSeatRotation(src2->GetSeatRotation());
+                // Skipping IsHighlighted()
 
                 auto trackType = dst2->GetTrackType();
                 if (track_element_has_speed_setting(trackType))
@@ -1114,13 +1116,9 @@ public:
                     dst2->SetPhotoTimeout(src2->GetPhotoTimeout());
                 }
 
-                // Skipping IsHighlighted()
+                // This has to be done last, since the maze entry shares fields with the colour and sequence fields.
                 auto rideType = _s6.rides[src2->GetRideIndex()].type;
-                if (rideType == RIDE_TYPE_MULTI_DIMENSION_ROLLER_COASTER)
-                {
-                    dst2->SetSeatRotation(src2->GetSeatRotation());
-                }
-                else if (rideType == RIDE_TYPE_MAZE)
+                if (rideType == RIDE_TYPE_MAZE)
                 {
                     dst2->SetMazeEntry(src2->GetMazeEntry());
                 }
